--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
             <option value="SPU">SPU</option>
             <option value="Miracle">Miracle</option>
             <option value="Pelangi">Pelangi</option>
+            <option value="Belle">Belle</option>
             <option value="Lead">Lead</option>
             <option value="Lead Bimacommerce">Lead Bimacommerce</option>
             <option value="Lead CTWA Naraa">Lead CTWA Naraa</option>
@@ -295,7 +296,7 @@
           <option value="Terra">Terra</option>
           <option value="SPU">SPU</option>
           <option value="Miracle">Miracle</option>
-          <option value="Pelangi">Pelangi</option>
+          <option value="Belle">Belle</option>
           <option value="Lead">Lead</option>
           <option value="Lead Bimacommerce">Lead Bimacommerce</option>
           <option value="Lead CTWA Naraa">Lead CTWA Naraa</option>
